# cmake_project_cookiecutter

./: README.md  cookiecutter.json
{{ cookiecutter.repo_name }}/: .gitignore  CMakeLists.txt  LICENSE  README.md  launch_docker.sh
{{ cookiecutter.repo_name }}/docker/: Dockerfile
{{ cookiecutter.repo_name }}/docs/: CMakeLists.txt  main.md  mainpage.md
{{ cookiecutter.repo_name }}/examples/: CMakeLists.txt  example.cpp
{{ cookiecutter.repo_name }}/src/: CMakeLists.txt  lib.cpp
{{ cookiecutter.repo_name }}/tests/: CMakeLists.txt  test_{{ cookie_cutter.repo_name }}.cpp  test_{{ cookiecutter.repo_name }}.cpp
